// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPlaceholder 1`] = `
<div>
  <div
    class="corn-search-placeholder"
  >
    输入关键词
  </div>
</div>
`;

exports[`SearchPlaceholder empty 1`] = `<div />`;

exports[`SearchPlaceholder more 1`] = `
<div>
  <div
    class="corn-search-placeholder"
  >
    <div
      class="corn-search-placeholder-list"
    >
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        输入关键词
      </div>
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        小熊宝宝
      </div>
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        常青藤爸爸
      </div>
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        @Corn
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchPlaceholder more run time 1`] = `
<div>
  <div
    class="corn-search-placeholder"
  >
    <div
      class="corn-search-placeholder-list"
      style="top: -0.6400rem;"
    >
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        输入关键词
      </div>
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        小熊宝宝
      </div>
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        常青藤爸爸
      </div>
      <div
        class="corn-search-placeholder-item corn-f corn-ac"
      >
        @Corn
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchPlaceholder more unmount 1`] = `<div />`;

exports[`SearchPlaceholder object 1`] = `<div />`;

exports[`SearchPlaceholder unmount 1`] = `<div />`;
